# space-invaders

./: .clang-format  .editorconf  .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp  scratch.h  window_constants.h
src/engine/: event.h  init.cpp  init.h  vec2.h
src/engine/physics/: direction.h
src/engine/renderer/: rect.h  renderer.h
src/engine/text/: text_renderer.h
src/engine/ui/: frame.h
src/event/: handle.cpp  handle.h
src/game/: enemy.cpp  enemy.h  game.h  projectile.cpp  projectile.h  ship.cpp  ship.h  start_screen.cpp  start_screen.h  state.h
